# pkg/structs.go
@@ -42,11 +42,104 @@ type RecipeIngredient struct {
 type Verb string
 
 const (
-	VerbChop Verb = "Couper"
-	VerbMix  Verb = "Melanger"
-	VerbBake Verb = "Cuire"
-	VerbBoil Verb = "Amalgamer"
-	VerbFry  Verb = "Monter"
+	VerbAbaisser    Verb = "Abaisser"
+	VerbAbricoter   Verb = "Abricoter"
+	VerbAppareiller Verb = "Appareiller"
+	VerbAromatiser  Verb = "Aromatiser"
+	VerbArroser     Verb = "Arroser"
+	VerbAssouplir   Verb = "Assouplir"
+	VerbBadigeonner Verb = "Badigeonner"
+	VerbBattre      Verb = "Battre"
+	VerbBlanchir    Verb = "Blanchir"
+	VerbBloquer     Verb = "Bloquer"
+	VerbBouler      Verb = "Bouler"
+	VerbBroyer      Verb = "Broyer"
+	VerbBruler      Verb = "Brûler"
+	VerbCandir      Verb = "Candir"
+	VerbCanneler    Verb = "Canneler"
+	VerbCarameliser Verb = "Caraméliser"
+	VerbChemiser    Verb = "Chemiser"
+	VerbChiqueter   Verb = "Chiqueter"
+	VerbClarifier   Verb = "Clarifier"
+	VerbColler      Verb = "Coller"
+	VerbColorer     Verb = "Colorer"
+	VerbConcasser   Verb = "Concasser"
+	VerbConcher     Verb = "Concher"
+	VerbCorner      Verb = "Corner"
+	VerbCoucher     Verb = "Coucher"
+	VerbCremer      Verb = "Crémer"
+	VerbCrouter     Verb = "Croûter"
+	VerbDecuire     Verb = "Décuire"
+	VerbDegazer     Verb = "Dégazer"
+	VerbDessecher   Verb = "Dessécher"
+	VerbDetailler   Verb = "Détailler"
+	VerbDevelopper  Verb = "Développer"
+	VerbDorer       Verb = "Dorer"
+	VerbDresser     Verb = "Dresser"
+	VerbEbarber     Verb = "Ébarber"
+	VerbEcumer      Verb = "Écumer"
+	VerbEdulcorer   Verb = "Édulcorer"
+	VerbEffiler     Verb = "Effiler"
+	VerbEmonder     Verb = "Émonder"
+	VerbEmulsionner Verb = "Émulsionner"
+	VerbEtamer      Verb = "Étamer"
+	VerbFaconner    Verb = "Façonner"
+	VerbFariner     Verb = "Fariner"
+	VerbFestonner   Verb = "Festonner"
+	VerbFleurer     Verb = "Fleurer"
+	VerbFoisonner   Verb = "Foisonner"
+	VerbFoncer      Verb = "Foncer"
+	VerbFouetter    Verb = "Fouetter"
+	VerbFourrer     Verb = "Fourrer"
+	VerbFraiser     Verb = "Fraiser"
+	VerbFrapper     Verb = "Frapper"
+	VerbFremir      Verb = "Frémir"
+	VerbGarnir      Verb = "Garnir"
+	VerbGlacer      Verb = "Glacer"
+	VerbGommer      Verb = "Gommer"
+	VerbGrainer     Verb = "Grainer"
+	VerbGraisser    Verb = "Graisser"
+	VerbGriller     Verb = "Griller"
+	VerbImbiber     Verb = "Imbiber"
+	VerbInfuser     Verb = "Infuser"
+	VerbLever       Verb = "Lever"
+	VerbLisser      Verb = "Lisser"
+	VerbLustrer     Verb = "Lustrer"
+	VerbMacaronner  Verb = "Macaronner"
+	VerbMacerer     Verb = "Macérer"
+	VerbMarbrer     Verb = "Marbrer"
+	VerbMasquer     Verb = "Masquer"
+	VerbMeringuer   Verb = "Meringuer"
+	VerbMonter      Verb = "Monter"
+	VerbMouler      Verb = "Mouler"
+	VerbNapper      Verb = "Napper"
+	VerbParer       Verb = "Parer"
+	VerbPetrir      Verb = "Pétrir"
+	VerbPiquer      Verb = "Piquer"
+	VerbPocher      Verb = "Pocher"
+	VerbPointer     Verb = "Pointer"
+	VerbPuncher     Verb = "Puncher"
+	VerbRabattre    Verb = "Rabattre"
+	VerbRayer       Verb = "Rayer"
+	VerbResserrer   Verb = "Resserrer"
+	VerbRioler      Verb = "Rioler"
+	VerbRompre      Verb = "Rompre"
+	VerbRubanner    Verb = "Rubanner"
+	VerbSabler      Verb = "Sabler"
+	VerbSangler     Verb = "Sangler"
+	VerbSerrer      Verb = "Serrer"
+	VerbSouder      Verb = "Souder"
+	VerbStrier      Verb = "Strier"
+	VerbTabler      Verb = "Tabler"
+	VerbTamiser     Verb = "Tamiser"
+	VerbTamponner   Verb = "Tamponner"
+	VerbTourer      Verb = "Tourer"
+	VerbTravailler  Verb = "Travailler"
+	VerbTremper     Verb = "Tremper"
+	VerbTurbiner    Verb = "Turbiner"
+	VerbVanner      Verb = "Vanner"
+	VerbVideler     Verb = "Videler"
+	VerbZester      Verb = "Zester"
 )
 
 type Step struct {
@@ -61,6 +154,7 @@ type Step struct {
 type Recipe struct {
 	gorm.Model
 	Name              string             `json:"name"`
+	ImageUrl          string             `json:"imageUrl"`
 	RecipeIngredients []RecipeIngredient `json:"recipeIngredients" gorm:"foreignKey:RecipeID"`
 	Steps             []Step             `json:"steps" gorm:"foreignKey:RecipeID"`
 	Timings           Timings            `json:"timings" gorm:"serializer:json"`
